// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppController (e2e) AuthController POST /auth/email/signin auths user: POST /auth/email/signin 200 1`] = `
Object {
  "nickName": "(not set)",
  "shortId": "nanoid-2",
}
`;

exports[`AppController (e2e) AuthController POST /auth/email/signup creates user and returns 201: POST /auth/email/signup 201 1`] = `
Object {
  "nickName": "(not set)",
  "shortId": "nanoid-2",
}
`;

exports[`AppController (e2e) AuthController POST /auth/oauth/google returns jwtToken on succeed: GET /user/self 1`] = `
Object {
  "avatarUrl": "https://example.com/a.png",
  "nickName": "(not set)",
  "shortId": "nanoid-1",
}
`;

exports[`AppController (e2e) UserController PUT /user/self updated resolved user: updated user 1`] = `
Object {
  "avatarUrl": "https://corp.com/a.gif",
  "nickName": "samuel mf jackson",
  "shortId": "nanoid-1",
}
`;
